@@ -1,3 +1,6 @@
+Alastair S - Fri Mar 11 2005
+	cube photo-ised, hold also now pauses the spin
+
 Courtney Cavin - Thu Mar 10 2005
 	added a delayed keypress menu in the filebrowser, current options:
 	 - Delete
